--- a/views/main/index.html
+++ b/views/main/index.html
@@ -87,7 +87,7 @@
         </ul>
     </div>
 </div>
-<div class="outer clearfix">
+<nav class="outer clearfix">
     <div class="menu clearfix">
         <div class="server clearfix">
             <h3>留学服务</h3>
@@ -165,7 +165,7 @@
             </li>
         </ul>
     </div>
-</div>
+</nav>
 <div class="ban_bg">
     <ul class="bg_part">
         <li><a href="#"></a></li>
@@ -211,7 +211,7 @@
         </ul>
     </div>
 </div>
-<div class="school">
+<section class="school">
     <div class="school_search">
         <h3>学校搜索</h3>
         <div class="school_search_content">
@@ -260,6 +260,50 @@
             </div>
         </div>
     </div>
+    <div class="popular_school">
+        <div class="popular_school_title clearfix">
+            <h3>热门学校</h3>
+            <a href="">全部学校</a>
+        </div>
+        <div class="school_logo clearfix">
+            <ul>
+                <li>
+                    <a href="" class="logo_img" style="background: url('/public/images/popularSchool.png') no-repeat left top"></a>
+                    <p><a href="" class="logo_cn">雷丁大学</a></p>
+                    <a href="" class="logo_en">University of Reading</a>
+                </li>
+                <li class="mid_logo">
+                    <a href="" class="logo_img" style="background: url('/public/images/popularSchool.png') no-repeat -130px top"></a>
+                    <p><a href="" class="logo_cn">贝尔法斯特女王大学</a></p>
+                    <a href="" class="logo_en">Queen's University Belfast</a>
+                </li>
+                <li>
+                    <a href="" class="logo_img" style="background: url('/public/images/popularSchool.png') no-repeat -260px top"></a>
+                    <p><a href="" class="logo_cn">范德堡大学</a></p>
+                    <a href="" class="logo_en">Vanderbilt University</a>
+                </li>
+            </ul>
+        </div>
+        <div class="school_logo clearfix">
+            <ul>
+                <li>
+                    <a href="" class="logo_img" style="background: url('/public/images/popularSchool.png') no-repeat left -50px"></a>
+                    <p><a href="" class="logo_cn">加州大学伯克利分校</a></p>
+                    <a href="" class="logo_en">University of California Berkeley</a>
+                </li>
+                <li class="mid_logo">
+                    <a href="" class="logo_img" style="background: url('/public/images/popularSchool.png') no-repeat -130px -50px"></a>
+                    <p><a href="" class="logo_cn">纽卡斯尔大学（澳大利亚）</a></p>
+                    <a href="" class="logo_en">University of Newcastle Australia</a>
+                </li>
+                <li>
+                    <a href="" class="logo_img" style="background: url('/public/images/popularSchool.png') no-repeat -260px -50px"></a>
+                    <p><a href="" class="logo_cn">塔斯马尼亚大学</a></p>
+                    <a href="" class="logo_en">University of Tasmania</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="school_news">
         <div class="school_news_title clearfix">
             <a href="" id="strategy">留学攻略</a>
@@ -286,7 +330,155 @@
             </ul>
         </div>
     </div>
-</div>
+</section>
+<section class="study_procedure">
+    <div class="section_title">
+        <p>留学流程</p>
+    </div>
+    <div class="procedure clearfix">
+        <a href="" class="procedure_part">
+            <i style="background: url('/public/images/procedure.png') no-repeat left bottom"></i>
+            <p>留学规划</p>
+        </a>
+        <a href="" class="procedure_part">
+            <i style="background: url('/public/images/procedure.png') no-repeat -50px bottom"></i>
+            <p>活动规划</p>
+        </a>
+        <a href="" class="procedure_part">
+            <i style="background: url('/public/images/procedure.png') no-repeat -100px bottom"></i>
+            <p>留学申请</p>
+        </a>
+        <a href="" class="procedure_part">
+            <i style="background: url('/public/images/procedure.png') no-repeat -150px bottom"></i>
+            <p>学习规划</p>
+        </a>
+        <a href="" class="procedure_part">
+            <i style="background: url('/public/images/procedure.png') no-repeat -200px bottom"></i>
+            <p>语言提升</p>
+        </a>
+        <a href="" class="procedure_part">
+            <i style="background: url('/public/images/procedure.png') no-repeat -250px bottom"></i>
+            <p>文书创作</p>
+        </a>
+        <a href="" class="procedure_part">
+            <i style="background: url('/public/images/procedure.png') no-repeat -300px bottom"></i>
+            <p>签证办理</p>
+        </a>
+        <a href="" class="procedure_part procedure_last">
+            <i style="background: url('/public/images/procedure.png') no-repeat -350px bottom"></i>
+            <p>后续服务</p>
+        </a>
+    </div>
+</section>
+<section class="study_abroad">
+    <div class="section_title">
+        <p>本科留学</p>
+    </div>
+    <div class="">
+
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<footer class="footer">
+    <div class="catalog">
+        <ul class="clearfix">
+            <li class="footer_part">
+                <p class="footer_title">留学服务</p>
+                <ul>
+                    <li><a href="">本科留学申请</a></li>
+                    <li><a href="">研究生留学申请</a></li>
+                    <li><a href="">高中留学申请</a></li>
+                    <li><a href="">本科转学申请</a></li>
+                </ul>
+            </li>
+            <li class="footer_part">
+                <p class="footer_title">考试培训</p>
+                <ul>
+                    <li><a href="">托福</a></li>
+                    <li><a href="">SAT</a></li>
+                    <li><a href="">SSAT</a></li>
+                    <li><a href="">ACT</a></li>
+                    <li><a href="">GRE</a></li>
+                </ul>
+            </li>
+            <li class="footer_part">
+                <p class="footer_title">培训课程</p>
+                <ul>
+                    <li><a href="">提分班课</a></li>
+                    <li><a href="">封闭班</a></li>
+                    <li><a href="">学习规划</a></li>
+                    <li><a href="">精英计划</a></li>
+                </ul>
+            </li>
+            <li class="footer_part company">
+                <p class="footer_title">各地分公司</p>
+                <ul>
+                    <li>
+                        <a href="">北京</a>
+                        <a href="">上海</a>
+                        <a href="">广州(广东)</a>
+                        <a href="">深圳(广东)</a>
+                    </li>
+                    <li>
+                        <a href="">沈阳(辽宁)</a>
+                        <a href="">武汉(湖北)</a>
+                        <a href="">西安(陕西)</a>
+                        <a href="">南京(江苏)</a>
+                        <a href="">郑州(河南)</a>
+                    </li>
+                    <li>
+                        <a href="">太原(山西)</a>
+                        <a href="">大连(辽宁)</a>
+                        <a href="">成都(四川)</a>
+                        <a href="">昆明(云南)</a>
+                        <a href="">青岛(山东)</a>
+                    </li>
+                    <li>
+                        <a href="">长春(吉林)</a>
+                        <a href="">杭州(浙江)</a>
+                        <a href="">重庆</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="footer_part last_part">
+                <p class="footer_title">社交媒体</p>
+                <ul>
+                    <li><a href="">海外留学官网微信</a></li>
+                    <li><a href="">海外留学官网微博</a></li>
+                    <li><a href="">海外留学移动官网</a></li>
+                    <li><a href="">关于我们</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="copyright clearfix">
+        <p>海外留学网&nbsp;&nbsp;版权所有</p>
+        <p>京ICP备00000000&nbsp;&nbsp;京公安备0000000000&nbsp;&nbsp;电话：010-00000000</p>
+        <p>Copyright&copy;2017&nbsp;hwlxue.com 海外留学网 All Rights Reserved</p>
+    </div>
+</footer>
+<div class="friend_link">
+    <div class="links clearfix">
+        <span>友情链接：</span>
+        <ul>
+            <li><a href="http://jquery.cuishifeng.cn/" target="_blank">jQuery API 中文文档</a></li>
+            <li><a href="http://nodejs.cn/api/" target="_blank">Node.js 中文文档</a></li>
+            <li><a href="http://www.bootcss.com/" target="_blank">Bootstrap 中文网</a></li>
+            <li><a href="http://glyphicons.com/" target="_blank">Glyphicon Halflings</a></li>
+            <li><a href="http://www.iqianduan.net/blog/how_to_use_swig" target="_blank">Swig 使用指南</a></li>
+            <li><a href="https://developer.mozilla.org/zh-CN/" target="_blank">Mozilla 开发者网络</a></li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
